<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <ImageView
                android:id="@+id/ivBackdropPath"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_movie" />

            <TextView
                android:id="@+id/tvTitleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guidelineImage"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textColor="?attr/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleTitle"
                tools:text="Title"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/tvOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:text="@string/description"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textSize="@dimen/_12sdp"
                android:textColor="?attr/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverviewTitle"
                tools:text="some description" />

            <LinearLayout
                android:id="@+id/llProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverview">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:src="@drawable/ic_camera"
                    />

                <Button
                    android:id="@+id/btnSetProfile"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/set_profile"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:gravity="top|start"
                android:hint="@string/post_your_comment"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scrollbars="vertical"
                android:textColorHint="?attr/hintTextColor"
                android:textColor="?attr/textColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llProfile"/>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etComment"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>